# template

./: .gitignore  CHANGELOG.md  Readme.md  stack.yaml  template-bin.cabal  templates-to-go.cabal
example/gosoline/: entity-sql.tmpl  entity-sql.var  entity.lua  entity.tmpl  entity.var
example/loop/: entity.lua  entity.tmpl  entity.var  input.json
example/simple/: poem.lua  poem.tmpl
src/cbits/: lib.c  lib.h
src/foreign/Text/Template/: Foreign.hs
src/lib/Text/Template/: Flags.hs  Foreign.hs  Interpreter.hs  Lexer.x  Main.hs  Parser.y
src/lib/Text/Template/Input/: Json.hs  Stdin.hs
