name:                templates-to-go
version:             0.1.0.0
synopsis:            Generate code from template files.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Anselm Jonas Scholl
maintainer:          jonas.scholl@lingumatiker.de
copyright:           (c) 2019 Anselm Jonas Scholl
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Template.Main
  other-modules:
    Text.Template.Interpreter
    Text.Template.Lexer
    Text.Template.Parser
  build-tools:         alex, happy
  build-depends:
    base >=4.12 && <5,
    bytestring,
    mtl,
    transformers,
    array,
    containers,
    hslua,
    directory,
    filepath,
    haskeline
  hs-source-dirs:      src/lib
  ghc-options:         -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

executable templates-to-go
  main-is:             Main.hs
  build-depends:
    base >=4.12 && <5,
    templates-to-go
  hs-source-dirs:      src/bin
  ghc-options:         -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010
