name:                templates-to-go
version:             0.1.0.0
synopsis:            Generate code from template files.
description:         A small tool to expand templates combined with a lua backend for more complex logic.
license:             BSD3
license-file:        LICENSE
author:              Anselm Jonas Scholl
maintainer:          jonas.scholl@lingumatiker.de
copyright:           (c) 2019 Anselm Jonas Scholl
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:
    Text.Template.Main
  other-modules:
    Text.Template.Flags
    Text.Template.Input.Json
    Text.Template.Input.Stdin
    Text.Template.Interpreter
    Text.Template.Lexer
    Text.Template.Parser
  build-tools:         alex, happy
  build-depends:
    base >=4.12 && <5,
    bytestring >=0.10.8.2 && <0.11,
    text >=1.2.4.0 && <1.3,
    mtl >=2.2.2 && <2.3,
    transformers >=0.5.5.0 && <0.6,
    array >=0.5.3.0 && <0.6,
    containers >=0.6.0.1 && <0.7,
    hslua >=1.0.3.2 && <1.1,
    directory >=1.3.3.0 && <1.4,
    filepath >=1.4.2.1 && <1.5,
    haskeline >=0.7.4.3 && <0.8,
    aeson >=1.4.6.0 && <1.5,
    scientific >=0.3.6.2 && <0.4,
    unordered-containers >=0.2.10.0 && <0.3,
    optparse-applicative >=0.15.1.0 && <0.16
  hs-source-dirs:      src/lib
  ghc-options:         -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010

executable templates-to-go
  main-is:             Main.hs
  build-depends:
    base >=4.12 && <5,
    templates-to-go
  hs-source-dirs:      src/bin
  ghc-options:         -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
  default-language:    Haskell2010
